--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "angularfire": "^2.3.0",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.1.3",
     "firebase": "^9.6.6",
     "rxjs": "~7.4.0",
