--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
+    "@angular/fire": "^7.2.1",
     "@angular/forms": "~13.1.0",
     "@angular/localize": "~13.1.0",
     "@angular/platform-browser": "~13.1.0",
@@ -22,7 +23,6 @@
     "@angular/router": "~13.1.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
     "angularfire": "^2.3.0",
-    "angularfire2": "^5.4.2",
     "bootstrap": "^4.1.3",
     "firebase": "^9.6.6",
     "rxjs": "~7.4.0",
