--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@ng-bootstrap/ng-bootstrap": "^11.0.0",
+    "angular-datatables": "^13.0.1",
     "angularfire": "^2.3.0",
     "bootstrap": "^4.1.3",
+    "datatables.net": "^1.11.3",
+    "datatables.net-bs4": "^1.11.3",
     "firebase": "^9.6.6",
+    "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -34,7 +38,9 @@
     "@angular/cli": "~13.1.2",
     "@angular/compiler-cli": "~13.1.0",
     "@types/angularfire": "^0.8.34",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.9",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
